# ALX-Hackthon-

./: README.md
atlas_backend/: .env  .gitignore  db.sqlite3  delete_migrations.py  requirements.txt
atlas_backend/atlas-env/: pyvenv.cfg
atlas_backend/atlas_backend/: asgi.py  celery.py  settings.py  urls.py
atlas_backend/collaboration/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
atlas_backend/feedback/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
atlas_backend/integrations/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
atlas_backend/localization/: forms.py  middleware.py  models.py  urls.py  utils.py  views.py
atlas_backend/main/: admin.py  models.py  serializers.py  urls.py  views.py
atlas_backend/maintenance/: admin.py  models.py  notifications.py  permissions.py  serializers.py  (+2 more)
atlas_frontend/: CONTRIBUTING.md  README.md  package-lock.json  package.json
backend/: README.md  db.sqlite3  manage.py  pyproject.toml
backend/atlas_backend/: settings.py  urls.py  wsgi.py
backend/atlas_backend/booking/: models.py
backend/booking/: models.py
backend/booking/migrations/: 0001_initial.py
backend/notifications/: admin.py  models.py  serializers.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py
backend/old_booking/migrations/: 0001_initial.py
backend/tests/: test_models.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json
(+90 files in other folders)
