Atlas_Workspace_Managements
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Md",email = "umarmd709@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg (>=3.2.6,<4.0.0)",
    "python-dotenv"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
